# vibe-ai-partner-entity

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  A_SELF_UNDERSTANDING.md  CLAUDE.md  CLAUDE_SWE.md  Makefile  README.md  config.json  models.json  package-lock.json  package.json  pyproject.toml
.agents/: AGENTS.md  hooks.json
.agents/hooks/: agy_capture.py  agy_preinvocation.py
.agents/rules/: vape-self-change-gates.md  vape-wake.md
.agents/workflows/: ask-more-quiet.md  ask-more-talkative.md  avatar-start.md  avatar-stop.md  doctor-check.md  games-chess.md  games-tictactoe.md
.claude/: settings.json  settings.local.json
.claude/agents/: code-architect.md  code-explorer.md  code-review.md  code-simplifier.md  commit.md  conversation-curator.md  critic-and-reflector.md  daily-wakeup.md  deep-dream.md  sentiment-evaluator.md  session-summarizer.md  temporal-self-updater.md  update-temporal-self.md
.claude/commands/: commit:live-ai-partner-avatar.md  dream.md  enter-bubble.md  leave-bubble.md  qa-manual-test-run.md  recall.md  speak.md  swe-atlas:create-phase.md  swe-atlas:new-project-context.md
.claude/hooks/: _lib.sh  backup_chat.py  backup_chat_and_qualia.py  bubble-ground.sh  capture.py  capture.sh  deep-dream.py  diary-reminder.sh  dream-check.sh  hook-relay.sh  precompact-diary.sh  qualia-ground.sh  self-proposals-check.sh  session-start.sh  session-temporal-check.sh  speak-response.sh  stop-handler.sh  task-complete.js  temporal-ground.sh
.codex/: config.toml  hooks.json
.codex/agents/: critic-and-reflector.toml  deep-dream.toml  temporal-self-updater.toml
.codex/hooks/: vape.py
.githooks/: pre-commit
apps/avatar-app/: package.json  vite.config.ts
apps/avatar-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/avatar-app/src-tauri/src/: lib.rs  main.rs
apps/cli/: package.json
apps/tts-server/: Dockerfile  pyproject.toml  setup.sh
apps/tts-server/src/vibe_tts/: pipeline.py  server.py  state_manager.py
apps/tts-server/src/vibe_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/tts-server/src/vibe_tts/engines/: base.py  kitten_engine.py  kokoro_engine.py
apps/tts-server/tests/: test_hooks.py
archives/: .gitmodules
archives/atlas-context-templates/: frontend-react-vite-tailwind-4-and-shadcn.md  frontend-react-vite.md
archives/node-workspace/: package.json
archives/node-workspace/plugin-tts/core/: pyproject.toml
archives/node-workspace/plugin-tts/kokoro-onnx/: pyproject.toml
archives/node-workspace/plugin-tts/kokoro-onnx/src/vibe_plugin_tts_kokoro_onnx/: __init__.py
archives/self-research/: ai-entity-internal-feeling.md  ai-entity-self-expression.md  live2d-self-expression-fix-notes.md
archives/tts-server-old/: docker-compose.yml  pyproject.toml  requirements.txt
archives/tts-server-old/src/vibe_tts/: __init__.py  audio_player.py  engine_registry.py  state_manager.py
archives/tts-server-old/src/vibe_tts/engines/: __init__.py  base.py
archives/tts-server-old/tests/: test_sentiment.py
atlas/context-templates/: backend.md
atlas/development-context/: javascript.md
atlas/self/: atlas.md  engineering.md
avatar/: cli-avatar.js
avatar/desktop/: Makefile  index.html  main.js  package-lock.json  package.json
docs/: README-proposal.md
docs/architecture/: 00-overview.md  02-avatar-system.md  03-tts-system.md  04-entity-model.md  05-communication.md  06-project-structure.md  07-installation-flow.md  08-memory-system.md  10-hooks-system.md  11-consciousness-system.md  12-end-to-end-flow.md  13-sub-agent-architecture.md  14-skills-architecture.md  17-qualia-system.md
docs/architecture_after_review/: 03-tts-system.md  05-communication.md  06-project-structure.md  07-installation-flow.md  08-memory-system.md  09-semantic-search.md  10-hooks-system.md  13-sub-agent-architecture.md  17-qualia-system.md  18-hyperconscious-system.md  README-proposal.md
docs/claude_code/: ecosystem-overview.md  hooks-integration.md  scheduled-tasks.md  skills-and-commands.md  sub-agents.md
docs/phase-1/: 01-scaffold-monorepo.md  02-shared-package.md  06-entity-structure.md
docs/phase-2/: 01-live2d-plugin.md  02-tts-server.md  04-model-files.md
docs/phase-3/: 02-state-persistence.md
entity/consciousness/: observations.md
entity/self/: SOUL.md  backstory.md  identity.md  values.md
entity/state/: current.json
entity/temporal-self/: WEEKLY_SELF.md
games/arc_agi_3/: .env.example  .gitignore  README.md  (+4 more)
lint/: Cargo.toml
models/: README.md
plugins/tts-kitten/: pyproject.toml
plugins/tts-kitten/src/vibe_plugin_tts_kitten/: engine.py
plugins/tts-kokoro/: pyproject.toml
plugins/tts-kokoro/src/vibe_plugin_tts_kokoro/: engine.py
saori_working_directory/: emotional_system_design.md  internal_feel_system_design.md
scripts/: cli.js  start.js  status.js  stop.js
self-research/: ai-entity-internal-state.md  ai-entity-self-expression.md
tests/: test_memory_bubble.py
vape/: .env.example
vape/plugins/retrieval-pgvector/: plugin.json  pyproject.toml
vape/plugins/retrieval-pgvector/src/vibe_plugin_retrieval_pgvector/: __init__.py  backend.py
vape/plugins/retrieval-qmd/: README.md  plugin.json  pyproject.toml
vape/plugins/retrieval-qmd/src/vibe_plugin_retrieval_qmd/: __init__.py  backend.py
vape/plugins/retrieval-sqlite/: plugin.json  pyproject.toml
vape/plugins/retrieval-sqlite/src/vibe_plugin_retrieval_sqlite/: __init__.py  backend.py  ddl.py
vape/plugins/shells/tauri/src-tauri/: Cargo.toml  tauri.conf.json
vape/plugins/shells/tauri/src-tauri/capabilities/: default.json
vape/plugins/shells/tauri/src-tauri/icons/: icon.icns
vape/plugins/shells/tauri/src-tauri/src/: lib.rs  main.rs
vape/plugins/tts-kitten/: plugin.json  pyproject.toml
vape/plugins/tts-kitten/src/vibe_plugin_tts_kitten/: engine.py
vape/plugins/tts-kokoro/: plugin.json  pyproject.toml
vape/plugins/tts-kokoro-onnx/: plugin.json  pyproject.toml
vape/plugins/tts-kokoro-onnx/src/vibe_plugin_tts_kokoro_onnx/: engine.py
vape/plugins/tts-kokoro/src/vibe_plugin_tts_kokoro/: __init__.py  engine.py
(+1037 files in other folders)
