[project]
name = "vibe-ai-partner-entity"
version = "0.1.0"
description = "Vibe AI Partner — Live AI companion with TTS and avatar"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "typer[all]>=0.15.0",
    "httpx>=0.27.0",
    "toons>=0.7.0",
    "python-dotenv>=1.0.0",
    "chess>=1.11.0",
]

[project.optional-dependencies]
tts-kokoro-onnx = ["vibe-plugin-tts-kokoro-onnx"]
tts-kokoro = ["vibe-plugin-tts-kokoro"]
tts-kitten = ["vibe-plugin-tts-kitten"]
retrieval-sqlite = ["vibe-plugin-retrieval-sqlite"]
retrieval-sqlite-vec = ["vibe-plugin-retrieval-sqlite[vec]"]
retrieval-pgvector = ["vibe-plugin-retrieval-pgvector"]
retrieval-qmd = ["vibe-plugin-retrieval-qmd"]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
vape = "engine.cli.main:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["vape"]

[tool.uv.workspace]
members = ["vape/plugins/tts-*", "vape/plugins/retrieval-*"]

[tool.uv.sources]
vibe-plugin-tts-kokoro-onnx = { workspace = true }
vibe-plugin-tts-kokoro = { workspace = true }
vibe-plugin-tts-kitten = { workspace = true }
vibe-plugin-retrieval-sqlite = { workspace = true }
vibe-plugin-retrieval-pgvector = { workspace = true }
vibe-plugin-retrieval-qmd = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
# The daily-driver voice lives in a DEFAULT group: as an optional extra it was
# pruned from the venv by every bare `uv sync`, and the voice died (silently,
# Engine: None) on the next server restart. Other engines stay opt-in extras.
tts = [
    "vibe-plugin-tts-kokoro-onnx",
]
# The default memory tier rides a DEFAULT group for the same reason: a bare
# `uv sync` must never prune the sqlite index backend out from under recall.
retrieval = [
    "vibe-plugin-retrieval-sqlite",
]

[tool.uv]
default-groups = ["dev", "tts", "retrieval"]

[tool.pytest.ini_options]
testpaths = ["misc/tests"]
markers = ["live: needs a real Postgres/Gemini (opt in with -m live)"]
addopts = "-q -m 'not live'"
