[project]
name = "vibe-tts"
version = "0.1.0"
description = "Vibe AI Partner TTS Server"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
]

[project.optional-dependencies]
kokoro = [
    "kokoro>=0.9.0",
    "torch>=2.0.0",
    "misaki[ja]>=0.8.0",
    "soundfile>=0.12.0",
]
kitten = [
    "kittentts>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",   # For testing FastAPI
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
