[project]
name = "vibe-tts"
version = "0.1.0"
description = "Vibe AI Partner TTS Server"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "vibe-plugin-tts-core",
]

[project.optional-dependencies]
kokoro = ["vibe-plugin-tts-kokoro"]
kokoro-onnx = ["vibe-plugin-tts-kokoro-onnx"]
kitten = ["vibe-plugin-tts-kitten"]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
vibe-plugin-tts-core = { path = "../../packages/plugin-tts/core", editable = true }
vibe-plugin-tts-kokoro = { path = "../../packages/plugin-tts/kokoro", editable = true }
vibe-plugin-tts-kokoro-onnx = { path = "../../packages/plugin-tts/kokoro-onnx", editable = true }
vibe-plugin-tts-kitten = { path = "../../packages/plugin-tts/kitten", editable = true }
