[project]
name = "vibe-plugin-tts-kitten"
version = "0.1.0"
description = "KittenTTS engine plugin — lightweight 15M param model, CPU-only"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vibe-ai-partner",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
vibe-ai-partner = { workspace = true }
