[project]
name = "vibe-plugin-tts-kokoro"
version = "0.1.0"
description = "Kokoro PyTorch TTS engine plugin"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vibe-ai-partner",
    "kokoro>=0.9.0",
    "torch>=2.0.0",
    "misaki[en,ja,zh]>=0.8.0",
    "ordered-set>=4.1.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
vibe-ai-partner = { workspace = true }
