[package]
name = "vibe-avatar-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "vibe_avatar_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
