[project]
name = "vibe-plugin-retrieval-pgvector"
version = "0.1.0"
description = "VAPE retrieval backend: Postgres + pgvector (halfvec HNSW + tsvector FTS)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "vibe-ai-partner-entity",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "google-genai>=1.0.0",
]

[project.entry-points."vibe.retrieval.providers"]
pgvector = "vibe_plugin_retrieval_pgvector:PgvectorBackend"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
vibe-ai-partner-entity = { workspace = true }
