[project]
name = "vibe-plugin-retrieval-qmd"
version = "0.1.0"
description = "VAPE retrieval backend: adapter over a user-installed qmd binary (keyless local vectors)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vibe-ai-partner-entity",
]

[project.entry-points."vibe.retrieval.providers"]
qmd = "vibe_plugin_retrieval_qmd:QmdBackend"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
vibe-ai-partner-entity = { workspace = true }
