[project]
name = "vibe-plugin-tts-core"
version = "0.1.0"
description = "Shared base types for Vibe TTS engine plugins"
requires-python = ">=3.10,<3.13"
dependencies = ["numpy>=1.26.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
