[project]
name = "vibe-plugin-tts-kokoro-onnx"
version = "0.1.0"
description = "Kokoro ONNX TTS engine plugin — lightweight, CPU-friendly"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vibe-plugin-tts-core",
    "kokoro-onnx>=0.4.0",
    "misaki-fork[en,ja,zh]>=0.9.0",
    "ordered-set>=4.1.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
vibe-plugin-tts-core = { path = "../core", editable = true }
