[package]
# Must stay exactly "vape-avatar": the Python launcher runs the compiled binary
# at src-tauri/target/release/vape-avatar.
name = "vape-avatar"
version = "0.1.0"
description = "VAPE Avatar — native window host for the VAPE avatar server"
authors = ["VAPE"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vape_avatar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# macos-private-api is required because tauri.conf.json sets app.macOSPrivateApi
# = true (needed for transparent windows on macOS).
tauri = { version = "2.11.2", features = ["macos-private-api"] }

# AppKit access (objc messaging) so the window can float over other apps' native
# fullscreen Spaces — see float_over_fullscreen() in lib.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
